[package]
name = "tracing-opentelemetry-fmt"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = "0.17.0"
tracing = "0.1.36"
tracing-opentelemetry = "0.17.4"
tracing-subscriber = "0.3.15"
